@@ -88,6 +88,7 @@ import org.slf4j.LoggerFactory;
 
 import uk.ac.rdg.resc.edal.dataset.Dataset;
 import uk.ac.rdg.resc.edal.dataset.DiscreteLayeredDataset;
+import uk.ac.rdg.resc.edal.dataset.plugins.VectorPlugin;
 import uk.ac.rdg.resc.edal.domain.Extent;
 import uk.ac.rdg.resc.edal.domain.HorizontalDomain;
 import uk.ac.rdg.resc.edal.domain.PointCollectionDomain;
@@ -1847,10 +1848,17 @@ public class WmsServlet extends HttpServlet {
              * different style of legend
              */
             Map<Integer, Category> categories = null;
+            /*
+             * We want to treat vector layers as a special case - we don't want
+             * to generate a full 2D legend
+             */
+            boolean isVector = false;
             if (getMapStyleParameters.getNumLayers() == 1) {
-                categories = WmsUtils
+                VariableMetadata metadata = WmsUtils
                         .getVariableMetadataFromLayerName(getMapStyleParameters.getLayerNames()[0],
-                                catalogue).getParameter().getCategories();
+                                catalogue);
+                categories = metadata.getParameter().getCategories();
+                isVector = metadata.getChildWithRole(VectorPlugin.DIR_ROLE) != null;
             }
             MapImage imageGenerator = getMapStyleParameters.getImageGenerator(catalogue);
             if (categories != null) {
@@ -1865,12 +1873,12 @@ public class WmsServlet extends HttpServlet {
                  */
                 int height = params.getPositiveInt("height", 200);
                 int width;
-                if (imageGenerator.getFieldsWithScales().size() > 1) {
+                if (imageGenerator.getFieldsWithScales().size() > 1 && !isVector) {
                     width = params.getPositiveInt("width", height);
                 } else {
                     width = params.getPositiveInt("width", 50);
                 }
-                legend = imageGenerator.getLegend(width, height);
+                legend = imageGenerator.getLegend(width, height, isVector);
             }
         }
         httpServletResponse.setContentType("image/png");
@@ -2346,12 +2354,12 @@ public class WmsServlet extends HttpServlet {
      */
     void handleWmsException(EdalException exception, HttpServletResponse httpServletResponse,
             boolean v130) throws IOException {
-        if(exception instanceof EdalLayerNotFoundException) {
+        if (exception instanceof EdalLayerNotFoundException) {
             httpServletResponse.setStatus(HttpServletResponse.SC_NOT_FOUND);
         } else {
             httpServletResponse.setStatus(HttpServletResponse.SC_BAD_REQUEST);
         }
-        
+
         httpServletResponse.setContentType("text/xml");
         StackTraceElement element = exception.getStackTrace()[0];
         log.warn("Wms Exception caught: \"" + exception.getMessage() + "\" from:"
